fixed some border radius & added toggle to NavBar (collapse bug to fix)

--- a/src/components/CategoriesFilter/CategoriesFilter.css
+++ b/src/components/CategoriesFilter/CategoriesFilter.css
@@ -15,10 +15,10 @@ button.d-block.p-0.pt-2.btn.btn-link:focus-visible,
   box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 0%) !important;
 }
 
-
 span.list-cat{
   color: #6d757d;
 }
+
 span.list-cat:hover{
   color: #1057be;
 }
@@ -27,10 +27,7 @@ span.list-cat:hover{
   margin-top: 1em;
 }
 
-button.reset.btn.btn-link{
-  color:#e25765;
-
-  font-size: 1.3em;
-  padding: 0px;
-  text-decoration: none;
+button.reset.btn.btn-outline-danger {
+  border-radius: 0px;
 }
+
