--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -1,1 +1,5 @@
 
+.filter-container {
+    margin-top: 1em;
+  }
+  
